--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
 title:            june的博客
-longtitle:        知不知为上
+longtitle:        june的博客
 author:           june
 email:            727979974@qq.com
 # github_username:  june224
