--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://june224.github.io'
-baseurl:          '/june.github.io'
+url:              'https://june224.cn'
+baseurl:          ''
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
